<resources>
    <string name="app_name">Academy Review And Rating</string>
    <string name="Login">User Login</string>
    <string name="Login_title">Academy R &amp; R</string>
    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="titleReg">Registarion</string>
    <string name="Email">Email</string>
    <string name="nav_header">Academy Review and Rating</string>
    <string name="title_activity_navigation_start">NavigationStartActivity</string>
    <string name="Rating_Lecturer_ability_to_teach">There are many lecturers who do not invest properly in teaching and not ready to come to the lecture.
        This parameter indicates on the ability of the lecturer to transfer educational material clearly.  </string>
    <string name="Rating_lecturer_interesting">What is the interest level in lectures?
        Does the lecturer transfer the educational material in an interesting or boring way?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="In_few_words">What do you think about the lecturer in general?... </string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tool_bar_title">Academy R &amp; R</string>
    <string name="academy_rank"></string>
    <string name="faculty_rank"></string>
    <string name="course_rank"></string>
    <string name="Lecturer_rank"></string>
    <string name="academic_difficulty">How difficult in your academic?
        There are faculties which sit on the lawn all day long, while other places have to "sweat" to get the degree.</string>
    <string name="students_character">In some faculties there is a competition between students,
        lack of assistance to the photographs, works, exercises, etc.,
        compared to other faculties where everyone helps each other, How is it with you?</string>
    <string name="secretary_attitude">Secretary and Faculty management should give you the students a kind and professional service.
        But between theory and action may be a long gap.</string>
    <string name="students_union">We all know that there are many students unions that working hard for students,
        and there are those who do nothing, how your students union?</string>
    <string name="social_life">Are you socially fun in academy? (Parties, social evenings, Cafeteria, breaks on the lawn).
        Because those are beautiful years, we would also like to enjoy!</string>
    <string name="few_words_academy">Here you can express yourself freely on your rating.</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
