<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.academyreviewandrating.LoginActivity"
    android:weightSum="1">

    <TextView
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/Login"
        android:textSize= "@dimen/font_size"
        android:textColor= "@color/colorPrimary"
        android:id="@+id/textLogin" />

    <TextView
        android:text="@string/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="91dp"
        android:id="@+id/textUser"
        android:contentDescription="@string/Email"
        android:layout_below="@+id/textLogin"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="12dp"
        android:layout_marginEnd="12dp" />

    <Button
        android:text="Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:id="@+id/buttonRegister"
        android:onClick="RegisterClick"
        android:layout_below="@+id/buttonLogin"
        android:layout_alignLeft="@+id/buttonLogin"
        android:layout_alignStart="@+id/buttonLogin"
        android:layout_alignRight="@+id/buttonLogin"
        android:layout_alignEnd="@+id/buttonLogin" />

    <Button
        android:text="Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="LoginClick"
        android:layout_marginTop="31dp"
        android:id="@+id/buttonLogin"
        android:layout_below="@+id/editTextPass"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextUser"
        android:layout_alignBaseline="@+id/textUser"
        android:layout_alignBottom="@+id/textUser"
        android:layout_alignLeft="@+id/editTextPass"
        android:layout_alignStart="@+id/editTextPass" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/editTextPass"
        android:layout_alignBaseline="@+id/textPass"
        android:layout_alignBottom="@+id/textPass"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="45dp"
        android:layout_marginStart="45dp" />

    <TextView
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:id="@+id/textPass"
        android:layout_below="@+id/editTextUser"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
