<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_watch_reviews"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.academyreviewandrating.WatchReviews">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/bar_course_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="@color/toolbar_color">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_course_details"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/my_color_bg"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:popupTheme="@style/AppTheme.PopupOverlay" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="My"
                android:layout_gravity="center"
                android:id="@+id/title_text_course_details"
                android:textSize="20dp"

                android:textStyle="normal|bold" />

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_below="@+id/bar_course_details">


        <TextView
            android:text="Code course:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Code_course_text1"
            android:textSize="19dp"
            android:layout_marginLeft="10dp"
            android:textColorLink="?android:attr/textColorPrimaryInverseNoDisable"
            android:textColor="@color/my_color_rank_text"
            android:textStyle="normal|bold|italic"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/academy_rank"
            android:textSize="19dp"
            android:id="@+id/Code_course_text2"
            android:layout_toRightOf="@+id/Code_course_text1"
            android:textColorLink="?android:attr/textColorPrimaryInverseNoDisable"
            android:textColor="@android:color/background_light"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:text="Credits:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Credits_text1"
            android:textSize="19dp"
            android:layout_marginLeft="10dp"
            android:textColorLink="?android:attr/textColorPrimaryInverseNoDisable"
            android:textColor="@color/my_color_rank_text"
            android:textStyle="normal|bold|italic"
            android:layout_below="@id/Code_course_text1"
            android:layout_marginTop="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faculty_rank"
            android:textSize="19dp"
            android:id="@+id/Credits_text2"
            android:layout_toRightOf="@+id/Credits_text1"
            android:layout_below="@+id/Code_course_text2"
            android:textColorLink="?android:attr/textColorPrimaryInverseNoDisable"
            android:textColor="@android:color/background_light"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp" />

        <TextView
            android:text="Time:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Time_text1"
            android:textSize="19dp"
            android:layout_marginLeft="10dp"
            android:textColorLink="?android:attr/textColorPrimaryInverseNoDisable"
            android:textColor="@color/my_color_rank_text"
            android:textStyle="normal|bold|italic"
            android:layout_below="@id/Credits_text1"
            android:layout_marginTop="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Lecturer_rank"
            android:textSize="19dp"
            android:id="@+id/Time_text2"
            android:layout_toRightOf="@+id/Time_text1"
            android:layout_below="@+id/Credits_text2"
            android:textColorLink="?android:attr/textColorPrimaryInverseNoDisable"
            android:textColor="@android:color/background_light"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp" />

        <TextView
            android:text="Room:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Room_text1"
            android:textSize="19dp"
            android:layout_marginLeft="10dp"
            android:textColorLink="?android:attr/textColorPrimaryInverseNoDisable"
            android:textColor="@color/my_color_rank_text"
            android:textStyle="normal|bold|italic"
            android:layout_below="@id/Time_text1"
            android:layout_marginTop="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_rank"
            android:textSize="19dp"
            android:id="@+id/Room_text2"

            android:textColorLink="?android:attr/textColorPrimaryInverseNoDisable"
            android:textColor="@android:color/background_light"
            android:layout_marginTop="170dp"
            android:layout_toEndOf="@+id/Credits_text1"
            android:layout_toRightOf="@+id/Credits_text1"
            android:layout_marginLeft="5dp" />

        <TextView
            android:text="Syllabus:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Syllabus_text1"
            android:textSize="19dp"
            android:layout_marginLeft="10dp"
            android:textColorLink="?android:attr/textColorPrimaryInverseNoDisable"
            android:textColor="@color/my_color_rank_text"
            android:textStyle="normal|bold|italic"
            android:layout_below="@id/Room_text1"
            android:layout_marginTop="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_rank"
            android:textSize="19dp"
            android:id="@+id/Syllabus_text2"
            android:layout_toRightOf="@+id/Syllabus_text1"

            android:textColorLink="?android:attr/textColorPrimaryInverseNoDisable"
            android:textColor="@android:color/background_light"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="220dp" />


    </RelativeLayout>
    </ScrollView>
</LinearLayout>
