<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_course__lacturer_rank"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.academyreviewandrating.Course_Lacturer_rank">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/bar_Rank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="@color/toolbar_color">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_Rank_faculty"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/my_color_bg"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:popupTheme="@style/AppTheme.PopupOverlay" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rating Academy/Faculty"
                android:layout_gravity="center"
                android:id="@+id/title_text_review"
                android:textSize="24dp"

                android:textStyle="normal|bold" />

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingTop="4dp">
                <TextView
                    android:text="Academy:"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView1"
                    android:textSize="17dp"
                    android:layout_marginLeft="10dp"
                    android:textColorLink="?android:attr/textColorPrimaryInverseNoDisable"
                    android:textColor="@color/my_color_rank_text"
                    android:textStyle="normal|bold|italic"
                    android:layout_marginTop="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/academy_rank"
                    android:textSize="17dp"
                    android:id="@+id/academy_rank_text"
                    android:layout_toRightOf="@+id/textView1"
                    android:textColorLink="?android:attr/textColorPrimaryInverseNoDisable"
                    android:textColor="@android:color/background_light"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp" />

                <TextView
                    android:text="Faculty:"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:textSize="17dp"
                    android:layout_marginLeft="10dp"
                    android:textColorLink="?android:attr/textColorPrimaryInverseNoDisable"
                    android:textColor="@color/my_color_rank_text"
                    android:textStyle="normal|bold|italic"
                    android:layout_below="@id/textView1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/faculty_rank"
                    android:textSize="17dp"
                    android:id="@+id/faculty_rank_text"
                    android:layout_toRightOf="@+id/textView3"
                    android:layout_below="@+id/academy_rank_text"
                    android:textColorLink="?android:attr/textColorPrimaryInverseNoDisable"
                    android:textColor="@android:color/background_light"
                    android:layout_marginLeft="15dp" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Academic Difficulty:"
                android:textColor="@color/my_color_rank_text"
                android:textSize="17dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/academic_difficulty"
                android:textColor="@android:color/background_light"
                android:textSize="14dp"
                android:textStyle="normal"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="15dp" />

            <RatingBar
                android:layout_width="wrap_content"
                android:id="@+id/RatingBar_Academic_Diff"
                android:stepSize="1.0"
                android:numStars="5"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="3dp"
                android:layout_weight="0.01"
                android:layout_height="42dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:text="Just pay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="3dp"
                    android:textColor="@color/my_color_rank_text"/>

                <TextView
                    android:text="Blood, sweat\n and tears"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView7"
                    android:layout_marginLeft="145dp"
                    android:layout_alignParentBottom="true"
                    android:layout_toRightOf="@+id/textView"
                    android:layout_toEndOf="@+id/textView"
                    android:layout_marginStart="112dp"
                    android:textColor="@color/my_color_rank_text"/>

            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Students character:"
                android:textColor="@color/my_color_rank_text"
                android:textSize="17dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/students_character"
                android:textColor="@android:color/background_light"
                android:textSize="14dp"
                android:textStyle="normal"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="15dp" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:id="@+id/RatingBar_students_character"
                android:stepSize="1.0"
                android:numStars="5"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="3dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="Everyone\n   help"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView11"
                    android:layout_marginLeft="145dp"
                    android:layout_alignParentBottom="true"
                    android:layout_toRightOf="@+id/textView10"
                    android:layout_toEndOf="@+id/textView10"
                    android:layout_marginStart="112dp"
                    android:layout_marginTop="3dp"
                    android:textColor="@color/my_color_rank_text"/>

                <TextView
                    android:text="No one\n helps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView10"
                    android:layout_marginLeft="45dp"
                    android:layout_marginTop="3dp"
                    android:textColor="@color/my_color_rank_text"
                    android:layout_marginStart="45dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Social life:"
                android:textColor="@color/my_color_rank_text"
                android:textSize="17dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/social_life"
                android:textColor="@android:color/background_light"
                android:textSize="14dp"
                android:textStyle="normal"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="15dp" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:id="@+id/RatingBar_Social_life"
                android:stepSize="1.0"
                android:numStars="5"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="3dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="Wild as\n american\n college"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView13"
                    android:layout_marginLeft="145dp"
                    android:layout_alignParentBottom="true"
                    android:layout_toRightOf="@+id/textView12"
                    android:layout_toEndOf="@+id/textView12"
                    android:layout_marginStart="112dp"
                    android:layout_marginTop="3dp"
                    android:textColor="@color/my_color_rank_text"/>

                <TextView
                    android:text="  Dry like\n a desert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView12"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="3dp"
                    android:textColor="@color/my_color_rank_text"
                    android:layout_marginStart="45dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Faculty secretary attitude:"
                android:textColor="@color/my_color_rank_text"
                android:textSize="17dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/secretary_attitude"
                android:textColor="@android:color/background_light"
                android:textSize="14dp"
                android:textStyle="normal"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="15dp" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/RatingBar_Faculty_secretary"
                android:stepSize="1.0"
                android:numStars="5"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="3dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Students' Union:"
                android:textColor="@color/my_color_rank_text"
                android:textSize="17dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/students_union"
                android:textColor="@android:color/background_light"
                android:textSize="14dp"
                android:textStyle="normal"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="15dp" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/RatingBar_students_union"
                android:stepSize="1.0"
                android:numStars="5"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="3dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="In few words:"
                android:textColor="@color/my_color_rank_text"
                android:textSize="17dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/few_words_academy"
                android:textColor="@android:color/background_light"
                android:textSize="14dp"
                android:textStyle="normal"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="15dp"
                />

            <EditText
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/editText_few_words_faculty"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:textColor="?android:attr/textColorPrimaryInverseNoDisable"
                android:layout_width="320dp"
                android:layout_height="95dp" />

            <CheckBox
                android:text="Anonymous"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox_anonymous_faculty"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:checked="true"/>

            <Button
                android:text="Send feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="sendFeedbackOnClick"
                android:id="@+id/button_rank_in_rating_faculty"
                android:background="@drawable/button_shape"
                android:textSize="@dimen/activity_vertical_margin"
                android:layout_gravity="end"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>
